# autotools_test

./: README.md
test_01/: Makefile.in  configure  configure.ac
test_01/autom4te.cache/: output.0  traces.0  traces.1
test_01/header/: Makefile.am  Makefile.in  add.h  print.h
test_01/src/: Makefile.am  Makefile.in
test_01/src/app/: Makefile.am  Makefile.in  main.c
test_01/src/calc/: Makefile.am  Makefile.in
test_01/src/print/: Makefile.am  Makefile.in  print.c
